# nasiya

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 352b864d3118_create_sessions_table.py  6f8e2c0b9d71_create_auth_rate_limits_table.py  (+4 more)
app/: cli.py  db.py  main.py  security_headers.py  settings.py
docs/: tt_nasiya_web_v1.md
tests/: conftest.py  postgresql.py  test_app_factory.py  test_auth_account_get.py  test_auth_dependencies.py  test_auth_login_get.py  test_auth_login_post.py  test_auth_logout_post.py  test_auth_rate_limit_migration.py  test_auth_rate_limiter.py  test_auth_session_revocation_e2e.py  test_auth_session_revoke_post.py  test_auth_sessions_get.py  test_cli_create_local_user.py  test_csrf.py  test_csrf_dependency.py  test_csrf_regressions.py  test_csrf_route_inventory.py  test_csrf_template_context.py  test_customer_auth_route_matrix.py  test_customer_csrf_matrix.py  test_customer_db_constraints.py  test_customer_get_side_effects.py  test_customer_mobile_css.py  test_customer_model_metadata.py  test_customer_onboarding_get.py  test_customer_pii_leakage.py  test_customer_profile_template.py  test_customer_repository_integration.py  test_customer_router_wiring.py  test_customer_service_integration.py  test_customer_view_model.py  test_customer_view_template_safety.py  test_customer_web_double_submit.py  test_customer_web_idor.py  test_db.py  test_db_dependency_integration.py  test_error_codes.py  test_health.py  test_home.py  (+14 more)
(+29 files in other folders)
